--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=coding-excercise
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/MoroApp
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jooq.sql-dialect=POSTGRES
