implement liquibase, add username and password to db.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=coding-excercise
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/MoroApp
+spring.datasource.url=jdbc:postgresql://localhost:5432/MoroAppLiq
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
