implement liquibase, add username and password to db.

--- a/src/main/resources/db/changelog/changes/003-add-username-password-to-users.yaml
+++ b/src/main/resources/db/changelog/changes/003-add-username-password-to-users.yaml
@@ -11,10 +11,11 @@ databaseChangeLog:
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
-                  defaultValue: ""
+                    unique: true
+                  defaultValueComputed: gen_random_uuid()
               - column:
                   name: password
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
-                  defaultValue: ""
+                  defaultValueComputed: gen_random_uuid()
