--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <description>Coding exercise solution for a job interview</description>
     <properties>
         <java.version>21</java.version>
+        <jdbcurl>jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}</jdbcurl>
     </properties>
 
     <dependencies>
@@ -36,6 +37,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-liquibase</artifactId>
         </dependency>
 
         <dependency>
@@ -64,24 +69,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>properties-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>read-project-properties</goal>
-                        </goals>
-                        <configuration>
-                            <files>
-                                <file>src/main/resources/jooq.properties</file>
-                            </files>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
@@ -89,20 +76,11 @@
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <version>4.33.0</version>
-                <executions>
-                    <execution>
-                        <id>liquibase</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>update</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
                     <changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
-                    <url>jdbc:postgresql://localhost:5432/MoroAppLiq</url>
-                    <username>postgres</username>
-                    <password>postgres</password>
+                    <url>${jdbcurl}</url>
+                    <username>${DB_USERNAME}</username>
+                    <password>${DB_PASSWORD}</password>
                 </configuration>
             </plugin>
             <plugin>
@@ -120,9 +98,9 @@
                 <configuration>
                     <jdbc>
                         <driver>org.postgresql.Driver</driver>
-                        <url>${db.url}</url>
-                        <user>${db.user}</user>
-                        <password>${db.pass}</password>
+                        <url>${jdbcurl}</url>
+                        <user>${DB_USERNAME}</user>
+                        <password>${DB_PASSWORD}</password>
                     </jdbc>
 
                     <generator>
